@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.8.11) unstable; urgency=low
 
   * delegate-client: fix SCM_RIGHTS check
   * use Linux 2.6 CLOEXEC/NONBLOCK flags
+  * tcache: INVALIDATE removes all variants (error documents etc.)
 
  --
 
